# ml-fraud-detection

./: .gitignore  README.md  config.yaml  dash.py  docker-compose.yml  main.py  makefile  prometheus.yml  pyproject.toml  readme.md  requirements.txt
kafka/: consumer.py  producer.py
notebooks/: new-model.ipynb
src/: data_prep.py  logger.py  redis_client.py
src/02_clean_prepare/: data_prep.py
src/flows/: retrain_flow.py
src/inference/: inference_prep.py  metrics.py  model_loader.py  service.py
src/monitoring/: buffer_monitor.py
src/setup/: logger.py
