[project]
name = "ml-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feature-engine>=1.9.3",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
